[package]
name = "bevy-jam-5"
authors = [
    "Philip Linden <lindenphilipj@gmail.com>",
    "Shane Celis <shane.celis@gmail.com>",
]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# core crates
bevy = { version = "0.14.0", features = ["multi_threaded"] }
bevy_asset_loader = { version = "0.21.0", features = ["progress_tracking"] }
rand = "0.8.5"
uuid = "1.10.0"

# Disable low-severity logs at compile time for performance.
log = { version = "0.4.22", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

# UI
iyes_progress = { version = "0.12.0", features = [
    "assets",
    "bevy_asset",
    "bevy_log",
] }

# physics
avian2d = "0.1.1"

# rendering
image = "0.25.2"
winit = "0.30.4"
bevy_video_glitch = "0.2.0"

# dev tools
bevy_mod_debugdump = { version = "0.11.0", optional = true }
bevy-inspector-egui = { version = "0.25.1", features = ["highlight_changes"] }

# audio
bevy_fundsp = { git = "https://github.com/shanecelis/bevy_fundsp.git", branch = "bevy-0.14" }
circular-buffer = "0.1.7"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "iyes_progress/debug",
    "bevy_mod_debugdump",
    "autoplay",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]
autoplay = []
physics_debug = []

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"

[patch.crates-io]
bevy_video_glitch = { git = "https://github.com/shanecelis/bevy_video_glitch.git" }
